--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ title : Blog of Feng Qian
 tagline: Site Tagline
 author :
   name : Feng Qian 钱烽
-  email : qf6101 at gmail.com
+  email : qf6101@gmail.com
   github : qf6101
   scholar : "http://scholar.google.com/citations?user=5KurcogAAAAJ&hl=en"
-#  feedburner : feedname
+  feedburner : qf6101
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
