--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author :
   name : Feng Qian
   email : qf6101@gmail.com
   github : qf6101
+  gcholar : "citations?user=5KurcogAAAAJ&hl=en"
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
