--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,9 @@ highlighter: pygments
 title : Blog of Feng Qian
 tagline: Site Tagline
 author :
-  name : Feng Qian
+  name : Feng Qian 钱烽
   email : qf6101@gmail.com
   github : qf6101
-  gcholar : "citations?user=5KurcogAAAAJ&hl=en"
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
